# bunch-of-words

./: .gitignore  bunch_of_words.cabal
src/: .Arrangement.hs.swo  .Arrangement.hs.swp  .Display.hs.swo  .Display.hs.swp  .Geometry.hs.swo  .Geometry.hs.swp  .Main.hs.swo  .Main.hs.swp  Arrangement.hi  Arrangement.hs  Display.hi  Display.hs  Geometry.hi  Geometry.hs  Main  Main.hi  Main.hs  Test.hs
